# drone-vision-system

./: .gitignore  Dockerfile.SITL  HOW_TO_SETUP_WINDOWS.md  Makefile  README.en.md  README.md  object_detection.md  pyrightconfig.json
pi5_tx/: README.md  main.py  pyproject.toml
pi5_tx/src/pi5_tx/: __init__.py  config.py  main.py  streamer.py
pi5_tx/src/pi5_tx/automation/: __init__.py  config.py  events.py  fsm.py  gates.py  gesture_control.py  mavlink.py  pixhawk_bench_gate_test.py  remote_control.py  sitl_gesture_control_test.py  sitl_smoke_test.py  state.py  takeover_test.py
pi5_tx/src/pi5_tx/inference/: __init__.py  config.py  detections.py  device.py  gesture.py  gesture_types.py  main.py  metadata.py  pipeline.py  pose.py  yolo.py
scripts/: pixhawk-bench-gate-test-pi.sh  run-inference-pi.sh  run-pi.sh  run-rx.sh  run-sitl-container.sh  setup-pi.sh  setup-rx.sh  sitl-gesture-control-test-pi.sh  sitl-smoke-test-pi.sh  sitl-unlimited-battery.parm  stream-to-rx.sh  takeover-test-pi.sh
vision_rx/: README.md  main.py  pyproject.toml
vision_rx/src/vision_rx/: __init__.py  config.py  control_client.py  control_overlay.py  main.py  metadata.py  metadata_overlay.py
vision_rx/src/vision_rx/display/: opencv.py  rtsp.py  webrtc.py
vision_rx/src/vision_rx/inference/: __init__.py  detections.py  device.py  pose.py  yolo.py
vision_rx/src/vision_rx/motion/: __init__.py  gesture.py  types.py
vision_rx/src/vision_rx/platform/: __init__.py  base.py  detect.py  jetson.py  linux.py  macos.py  windows.py
vision_rx/src/vision_rx/receiver/: __init__.py  ffmpeg_udp.py
